Try do complete `patch` requests and beautify the page.
